--- a/Products/package.json
+++ b/Products/package.json
@@ -2,7 +2,7 @@
   "name": "Products",
   "version": "0.0.1",
   "scripts": {
-    "start": "webpack-dev-server",
+    "start": "webpack-dev-server --hot --inline",
     "build": "webpack"
   },
   "dependencies": {
